AG-12640 Dark mode h4 fix

--- a/packages/ag-charts-website/src/pages-styles/homepage.module.scss
+++ b/packages/ag-charts-website/src/pages-styles/homepage.module.scss
@@ -502,6 +502,9 @@
         font-weight: var(--text-bold);
         margin-bottom: $spacing-size-2;
         color: var(--color-brand-500);
+        #{$selector-darkmode} & {
+            color: var(--color-brand-200);
+        }
     }
 
     p {
